--- a/disk/f2f/f2fshowcase.css
+++ b/disk/f2f/f2fshowcase.css
@@ -1,13 +1,35 @@
-* {box-sizing: border-box;}
+* {
+    box-sizing: border-box;
+    font-family: "Ubuntu", "Roboto Condensed", "Trebuchet MS", sans-serif;
+}
 
 body {
     text-align: center;
+    background-color: #eee;
+}
+
+div {
+    display: block;
+}
+
+svg {
+    background-color: #fff;
+    border-radius: 6px;
+    margin: 10px;
+    box-shadow: 3px 4px 3px #888;
+}
+
+a {
+    color: black;
+    border: 1px solid transparent;
+    text-decoration: none;
 }
 
 input {
     border: 1px solid transparent;
     padding: 10px;
-    margin: 0.5%;
+    margin: 1%;
+    box-shadow: 2px 3px 2px #888888;
 }
 
 input[type=submit] {
@@ -23,10 +45,48 @@ input[type=submit]:active{
     transition: 0.3s;
 }
 
+.reveal {
+    width: 100%;
+    font-size: 1em;
+    padding: 16 14;
+}
+
+.reveal.play {
+    background-color: #00dd00;
+}
+
+.reveal.play:hover {
+    background-color: #00ff00;
+}
+
+.reveal.stop {
+    background-color: #dd0000;
+}
+
+.reveal.stop:hover {
+    background-color: #ff5555;
+}
+
+.reveal.rewind {
+    background-color: #5998cc;
+}
+
+.reveal.rewind:hover {
+    background-color: #5998ff;
+}
+
+.reveal.slow {
+    background-color: #00aaaa;
+}
+
+.reveal.slow:hover {
+    background-color: #00cccc;
+}
+
 .desc {
     font-size: 24px;
     display: none;
-    font-family: Verdana, sans-serif;
+    font-family: "Ubuntu", "Roboto Condensed", Verdana, sans-serif;
 }
 
 .tooltip {
@@ -40,7 +100,7 @@ input[type=submit]:active{
     visibility: hidden;
     opacity: 0;
     font-size: 16px;
-    font-family: Verdana, sans-serif;
+    font-family: "Ubuntu", "Roboto Condensed", Verdana, sans-serif;
     font weight: normal;
     font-style: italic;
     width: 300px;
@@ -64,22 +124,30 @@ input[type=submit]:active{
     z-index: 1;
 }
 
+.tooltip .tooltiptext:hover {
+    visibility: hidden;
+    opacity: 0;
+}
+
 .tab {
     text-align: left;
-    margin: 0 auto;
+    margin: 5px auto;
     width: 80%;
     overflow: hidden;
     background-color: #ccc;
     border: 1px solid black;
+    border-radius: 6px;
 }
  .tabtxt {
      transition: 0.3s;
      font-size: 24px;
-     font-family: Verdana, sans-serif;
+     font-family: "Ubuntu", "Roboto Condensed", Verdana, sans-serif;
      text-align: left;
-     margin: 0 auto;
+     margin: 5px auto;
      width: 80%;
-     background-color: #eee;
+     background-color: #eef;
+     border: 1px solid #ccf;
+     border-radius: 6px;
      padding: 15px;
  }
 
@@ -107,5 +175,9 @@ input[type=submit]:active{
 
 .tablinks {
     width: 33%;
+    background-color: inherit;
+}
+
+#A, #B, #C {
     background-color: inherit;
 }
