--- a/disk/f2f/f2fshowcase.css
+++ b/disk/f2f/f2fshowcase.css
@@ -27,6 +27,7 @@ a {
 
 input {
     border: 1px solid transparent;
+    border-radius: 5px;
     padding: 10px;
     margin: 1%;
     box-shadow: 2px 3px 2px #888888;
