f2f showcase now uses ICLReader V24 Framework

--- a/disk/f2f/f2fshowcase.css
+++ b/disk/f2f/f2fshowcase.css
@@ -16,6 +16,7 @@ svg {
     background-color: #fff;
     border-radius: 6px;
     margin: 10px;
+    text-align: center;
     box-shadow: 3px 4px 3px #888;
 }
 
